--- a/ExamenJSTC/pom.xml
+++ b/ExamenJSTC/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>upeu.edu.pe</groupId>
-  <artifactId>ProyectoGUI</artifactId>
+  <artifactId>ExamenJSTC</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>ProyectoGUI</name>
+  <name>ExamenJSTC</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -20,6 +20,7 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -27,7 +28,6 @@
       <version>1.18.24</version>
       <scope>provided</scope>
     </dependency>
-
   </dependencies>
 
 <build> 
@@ -40,7 +40,7 @@
 <configuration> 
 <archive>
 <manifest>
-<mainClass>pe.edu.upeu.swingjava.ExamenJava</mainClass> 
+<mainClass>pe.edu.upeu.ExamenJSTC.ExamenJava</mainClass> 
 </manifest>
 </archive>
 </configuration>
